# cmake-sfml-project

./: .gitignore  CMakeLists.txt
.github/workflows/: cd.yml
